--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-firebase/app": "^17.3.0",
+    "@react-native-firebase/auth": "^17.3.0",
     "@react-native-firebase/firestore": "^17.3.0",
+    "@react-native-firebase/storage": "^17.3.0",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@types/react": "~18.0.24",
